# MSPR

./: .gitignore  CONTEXT_AI.md  EASA_CO2_Database__web__-Issue11.xlsx  clean_log.txt  docker-compose.ci.yml  docker-compose.yml  download_railways.py  etl.py  etl_new_schema.py  extract_flights.py  gtfs_to_postgres.py  import_shapes.py  loki-config.yaml  parser.py  pyproject.toml  pytest.ini  requirements.txt  schema.sql  visualisation.py
.github/workflows/: cd.yml  ci.yml  pipeline.yml
affichageCarteAvion/: map_flights.py
api/: .env  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt  routers.py  security.py
api/src/api/: database.py  main.py  routers.py  security.py
api/tests/: conftest.py  test_auth.py  test_compare.py  test_emissions.py  test_health.py  test_routes.py  test_search.py  test_sources.py  test_stations.py  test_stats.py  test_vehicles.py
backontrack/: back_on_track_agencies.csv  back_on_track_calendar.csv  back_on_track_routes.csv  back_on_track_stops.csv  back_on_track_trip_stop.csv  back_on_track_trips.csv
grafana/dashboards/: railcarbon.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasources.yml
