[project]
name = "railcarbon-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.29",
    "python-dotenv==1.0.1",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
